@@ -21,15 +21,15 @@ require 'rubygems'
 if ARGV.include? '--help' then
   puts "ruby setup.rb [options]:"
   puts
-  puts "  --prefix=DIR         Prefix path for installing RubyGems"
-  puts "                       Will not affect gem repository"
+  puts "  --prefix=DIR           Prefix path for installing RubyGems"
+  puts "                         Will not affect gem repository location"
   puts
-  puts "  --format-executable  Make the gem command's prefix and suffix match ruby's"
-  puts "                       If ruby is installed as ruby19, gem will be gem19"
+  puts "  --no-format-executable Make the gem command's prefix and suffix match ruby's"
+  puts "                         If ruby is installed as ruby19, gem will be gem19"
   puts
-  puts "  --no-rdoc            Don't build RDoc for RubyGems"
+  puts "  --no-rdoc              Don't build RDoc for RubyGems"
   puts
-  puts "  --no-ri              Don't build ri for RubyGems"
+  puts "  --no-ri                Don't build ri for RubyGems"
 
   exit
 end
@@ -95,7 +95,7 @@ Dir.chdir 'bin' do
   bin_files = Dir['*']
 
   bin_files.each do |bin_file|
-    bin_file_formatted = if ARGV.include? '--format-executable' then
+    bin_file_formatted = if ARGV.include? '--no-format-executable' then
                            bin_file
                          else
                            Gem.default_exec_format % bin_file
